fixed flex stretch issue on impact page

--- a/src/routes/AnnualReport2018/components/AnnualReportView.scss
+++ b/src/routes/AnnualReport2018/components/AnnualReportView.scss
@@ -33,8 +33,6 @@
   margin: 0 auto;
   max-width: 1200px;
   width: 90%;
-  display: flex;
-  flex-direction: column;
 }
 
 .annual-report--year {
